Bug 321169, add logging facility to xul templates, r=sicking,sr=neil