content/xul/templates/src/nsXULContentUtils.cpp
@@ -89,6 +89,7 @@
 #include "nsCollationCID.h"
 #include "nsILocale.h"
 #include "nsILocaleService.h"
+#include "nsIConsoleService.h"
 
 static NS_DEFINE_CID(kRDFServiceCID,        NS_RDFSERVICE_CID);
 
@@ -97,6 +98,10 @@ static NS_DEFINE_CID(kRDFServiceCID,        NS_RDFSERVICE_CID);
 nsIRDFService* nsXULContentUtils::gRDF;
 nsIDateTimeFormat* nsXULContentUtils::gFormat;
 nsICollation *nsXULContentUtils::gCollation;
+
+#ifdef PR_LOGGING
+extern PRLogModuleInfo* gXULTemplateLog;
+#endif
 
 #define XUL_RESOURCE(ident, uri) nsIRDFResource* nsXULContentUtils::ident
 #define XUL_LITERAL(ident, val) nsIRDFLiteral* nsXULContentUtils::ident
@@ -483,4 +488,18 @@ nsXULContentUtils::SetCommandUpdater(nsIDocument* aDocument, nsIContent* aElemen
     if (NS_FAILED(rv)) return rv;
 
     return NS_OK;
+}
+
+void
+nsXULContentUtils::LogTemplateError(const char* aStr)
+{
+  nsAutoString message;
+  message.AssignLiteral("Error parsing template: ");
+  message.Append(NS_ConvertUTF8toUTF16(aStr).get());
+
+  nsCOMPtr<nsIConsoleService> cs = do_GetService(NS_CONSOLESERVICE_CONTRACTID);
+  if (cs) {
+    cs->LogStringMessage(message.get());
+    PR_LOG(gXULTemplateLog, PR_LOG_ALWAYS, ("Error parsing template: %s", aStr));
+  }
 }
